variables.Variables.scala.code
var x = 0:int
while (estSurBiscuit()==false)	{
  avance()
  x=x+1
}
prendBiscuit()
recule(x)
poseBiscuit()